# kyanite

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  flake.nix  justfile
crates/builtins/: Cargo.toml
crates/builtins/src/: lib.rs
crates/kyac/: Cargo.toml
crates/kyac/snapshots/: kyac__ast__tests__access.snap  kyac__ast__tests__calls.snap  kyac__ast__tests__empty.snap  kyac__ast__tests__expr.snap  kyac__ast__tests__hello_world.snap  kyac__ast__tests__mixed.snap  kyac__parse__tests__calls.snap  kyac__pass__typecheck__tests__classes.snap  kyac__pass__typecheck__tests__free_fun_cast_err.snap  kyac__pass__typecheck__tests__method_cast_err.snap  kyac__pass__typecheck__tests__records.snap  kyac__pass__typecheck__tests__type_param_shadow.snap  kyac__pass__typecheck__tests__undef_generic_type.snap  kyac__pass__typecheck__tests__undef_type_param_free_fun.snap  kyac__pass__typecheck__tests__unsatisfied_bounds.snap  kyac__pass__typecheck__tests__varied.snap  kyac__token__tests__access.snap  kyanite__ast__tests__calls.snap  kyanite__ast__tests__expr.snap  kyanite__kyir__tests__nested_calls.snap  kyanite__kyir__tests__varied.snap  kyanite__parse__tests__simple.snap  kyanite__token__tests__invalid.snap  kyanite__token__tests__loooong.snap  kyanite__token__tests__varied.snap
crates/kyac/src/: builtins.rs  error.rs  lib.rs  parse.rs
crates/kyac/src/ast/: mod.rs  node.rs  span.rs  strip.rs  ty.rs
crates/kyac/src/backend/: mod.rs
crates/kyac/src/backend/kyir/: mod.rs  opcode.rs
crates/kyac/src/backend/llvm/: mod.rs
crates/kyac/src/builtins/: mod.rs
crates/kyac/src/compile/: asm.rs  llvm.rs  mod.rs
crates/kyac/src/pass/: constant_fold.rs  mod.rs  symbol.rs  typecheck.rs
crates/kyac/src/token/: kind.rs  mod.rs
crates/kyac/test-cases/: access.kya  calls.kya  empty.kya  hello.kya  unary.kya
crates/kyac/test-cases/kyir/: nested-calls.kya  varied.kya
crates/kyac/test-cases/parser/: simple.kya  toplevel.kya
crates/kyac/test-cases/typecheck/: classes.kya  nesting.kya  records.kya
crates/kyac/test-cases/typecheck/generics/: free-fun-cast-err.kya  (+5 more)
crates/kyanite/: Cargo.toml
crates/kyanite/snapshots/: r#mod__functions.snap  r#mod__hello.snap  r#mod__nested.snap
crates/kyanite/src/: asm.rs  lib.rs  llvm.rs  subprocess.rs
crates/kyanite/tests/: mod.rs
crates/kyanite/tests/kyir/: mod.rs
crates/kyanite/tests/llvm/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: alloc.rs  cmp.rs  gc.rs  lib.rs  print.rs
kyanite-cli/: Cargo.toml
kyanite-cli/snapshots/: r#mod__decls.snap  r#mod__exprs.snap  r#mod__hello.snap
kyanite-cli/src/: lib.rs
kyanite-cli/tests/: mod.rs
kyanite-core/: Cargo.toml
kyanite-core/examples/: expr.kya  function_empty.kya  hello.kya  working.kya
kyanite-core/snapshots/: kyanite__ast__tests__access.snap  kyanite__ast__tests__calls.snap  kyanite__ast__tests__empty.snap  kyanite__ast__tests__expr.snap  kyanite__ast__tests__hello_world.snap  kyanite__ast__tests__mixed.snap  kyanite__kyir__canon__tests__nested_calls.snap  kyanite__kyir__tests__varied.snap  kyanite__parse__tests__nested.snap  kyanite__parse__tests__simple.snap  kyanite__parse__tests__toplevel.snap  kyanite__pass__typecheck__tests__records.snap  kyanite__pass__typecheck__tests__varied.snap  kyanite__token__tests__access.snap  kyanite__token__tests__calls.snap  kyanite__token__tests__empty.snap  kyanite__token__tests__expr.snap  kyanite__token__tests__hello_world.snap  kyanite__token__tests__invalid.snap  kyanite__token__tests__loooong.snap  kyanite__token__tests__mixed.snap  kyanite__token__tests__unterm.snap  kyanite__token__tests__varied.snap
kyanite-core/src/: compile.rs  lib.rs  macros.rs  parse.rs  subprocess.rs  token.rs
kyanite-core/src/ast/: debug.rs  init.rs  mod.rs  node.rs  span.rs  underline.rs
kyanite-core/src/ast/snapshots/: kyanite__ast__tests__calls.snap  kyanite__ast__tests__mixed.snap
kyanite-core/src/backend/kyir/: blocks.rs  canon.rs  color.rs  mod.rs  translate.rs
kyanite-core/src/backend/llvm/: mod.rs
kyanite-core/src/cli/: mod.rs
kyanite-core/src/codegen/: liveness.rs  mod.rs  registers.rs  test.asm  test.kya
kyanite-core/src/codegen/builtins/: math.rs  mod.rs  println.rs  stub.kya
kyanite-core/src/codegen/llvm/: mod.rs
kyanite-core/src/compile/: asm.rs  kyir.rs  llvm.rs  mod.rs
kyanite-core/src/details/: error.rs
kyanite-core/src/kyir/: blocks.rs  canon.rs  eseq.rs  mod.rs  rewrite.rs
kyanite-core/src/kyir/arch/: amd64.rs  mod.rs
kyanite-core/src/pass/: mod.rs  symbol.rs  typecheck.rs
kyanite-core/src/reporting/: error.rs
kyanite-core/src/snapshots/: kyanite__pass__typecheck__tests__varied.snap
kyanite-core/src/token/: kind.rs  mod.rs
kyanite-core/test-cases/: access.kya  calls.kya  conditions.kya  empty.kya  expr.kya  hello.kya  mixed.kya  records.kya  unary.kya
kyanite-core/test-cases/kyir/: nested-calls.kya  varied.kya
kyanite-core/test-cases/parser/: nested.kya  toplevel.kya
kyanite-core/test-cases/tokens/: loooong.kya  unterm.kya  varied.kya
kyanite-core/test-cases/typecheck/: records.kya  varied.kya
kyanite-core/test-cases/working/: arg.kya  loop.kya  test.kya
kyanite-core/tests/: mod.rs
(+155 files in other folders)
