[package]
name = "kyanite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
thiserror = "1.0.48"

[lib]
name = "kyanite"
path = "src/lib.rs"

[[bin]]
name = "kyanite"
path = "src/bin/main.rs"
