[package]
name = "kyanite_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
kyanite = { path = "../kyanite-core" }
insta = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
which = "4.4.2"
