[package]
name = "kyanite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
insta = { version  = "1.32.0", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.48"

[lib]
name = "kyanite"
path = "src/lib.rs"
