[package]
name = "builtins"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
libc = "0.2.153"

[lib]
name = "kyanite_builtins"
crate-type = ["cdylib"]

[lints.clippy]
pedantic = "deny"
