[package]
name = "kyac"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
indoc = "2.0.4"
inkwell = { version = "0.2.0", features = ["llvm15-0"] }
insta = { version = "1.32.0" }
thiserror = "1.0.48"

[lib]
name = "kyac"
path = "src/lib.rs"

[lints.clippy]
pedantic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
