[package]
name = "kyanite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
kyac = { path = "../kyac" }
subprocess = { path = "../subprocess" }
insta = { version = "1.32.0", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
which = "4.4.2"

[lints.clippy]
pedantic = "deny"