[package]
name = "kyanite"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
insta = { version = "1.32.0", features = ["yaml"] }
kyac = { path = "../kyac" }
serde = { version = "1.0.188", features = ["derive"] }
subprocess = { path = "../subprocess" }
which = "4.4.2"

[lints.clippy]
pedantic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
