[package]
name = "kyanite"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
fern = { version = "0.6.2", features = ["colored"] }
kyac = { path = "../kyac" }
log = "0.4.20"
runtime = { version = "0.2.0", path = "../runtime" }
subprocess = { path = "../subprocess" }
which = "4.4.2"

[lints.clippy]
pedantic = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
