[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
colored = "2.1.0"
lazy_static = "1.4.0"

[lib]
name = "kyanite_runtime"
crate-type = ["cdylib"]

[lints.clippy]
pedantic = "deny"
